--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_screenutil: ^5.8.4
   fluttertoast: ^8.2.2
   get_it: ^7.6.0
+  path: ^1.8.3
+  path_provider: ^2.0.15
   provider: ^6.0.5
   sqflite: ^2.2.8+4
 
