--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.0.15
   provider: ^6.0.5
   sqflite: ^2.2.8+4
+  file_picker: ^5.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
