--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   equatable: ^2.0.5
+  file_picker: ^5.3.0
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.8.4
@@ -40,12 +41,13 @@ dependencies:
   path_provider: ^2.0.15
   provider: ^6.0.5
   sqflite: ^2.2.8+4
-  file_picker: ^5.3.0
 
 dev_dependencies:
+  build_runner: ^2.4.4
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
