add_send_email_with_download_link_when_success_to_actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,7 +49,7 @@ jobs:
           body: |
             Hi there,
             
-            Your app build was successful! Here are the download links:
+            Your app build was successful! Here are the download links:)
             
             Android APK: ${{ steps.release.outputs.android_download_link }}
             iOS IPA: ${{ steps.release.outputs.ios_download_link }}
