--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,12 @@ jobs:
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 
+      - name: Export Download Links
+        id: export_links
+        run: |
+          echo "ANDROID_DOWNLOAD_LINK=https://github.com/$GITHUB_REPOSITORY/releases/latest/download/app-armeabi-v7a-debug.apk" >> $GITHUB_ENV
+          echo "IOS_DOWNLOAD_LINK=https://github.com/$GITHUB_REPOSITORY/releases/latest/download/app.ipa" >> $GITHUB_ENV
+
       - name: Send Email Notifications
         uses: dawidd6/action-send-mail@v3
         with:
@@ -49,19 +55,13 @@ jobs:
           body: |
             Hi there,
             
-            Your app build was successful! Here are the download links:)
+            Your app build was successful! Here are the download links:
             
-            Android APK: ${{ env.ANDROID_DOWNLOAD_LINK }}
-            iOS IPA: ${{ env.IOS_DOWNLOAD_LINK }}
+            Android APK: ${{ steps.export_links.outputs.ANDROID_DOWNLOAD_LINK }}
+            iOS IPA: ${{ steps.export_links.outputs.IOS_DOWNLOAD_LINK }}
             
             Best regards,
             Your App Team
-
-      - name: Export Download Links
-        id: export_links
-        run: |
-          echo "ANDROID_DOWNLOAD_LINK=https://github.com/$GITHUB_REPOSITORY/releases/latest/download/app-armeabi-v7a-debug.apk" >> $GITHUB_ENV
-          echo "IOS_DOWNLOAD_LINK=https://github.com/$GITHUB_REPOSITORY/releases/latest/download/app.ipa" >> $GITHUB_ENV
 
 # push to master, main, develop
 # pull request on main master
