--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,5 +65,38 @@ jobs:
             
             Best regards,
             Your App Team
+
+name: Build, code quality, tests
+
+on: 
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: build release
+      run: ./gradlew assembleRelease
+    - name: upload artefact to App Center
+      uses: wzieba/AppCenter-Github-Action@v1
+      with:
+        appName: wzieba/Sample-App
+        token: ${{secrets.APP_CENTER_TOKEN}}
+        group: Testers
+        file: build/app/outputs/apk/debug/app-armeabi-v7a-debug.apk
+        notifyTesters: true
+        debug: false
 # push to master, main, develop
 # pull request on main master
