add_appcenter_to_actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,7 +65,7 @@ jobs:
             
             Best regards,
             Your App Team
-  build:
+  build-linux:
     name: Build & Release (Linux)
     runs-on: ubuntu-latest
     steps:
