add_update_download_artefact_from_first_job_to_access_it_from_second_job

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,10 +88,10 @@ jobs:
       - name: upload artefact to App Center
         uses: wzieba/AppCenter-Github-Action@v1
         with:
-          appName: products
+          appName: products_apk
           token: ${{secrets.APP_CENTER_TOKEN}}
-          group: Testers
-          file: /home/runner/work/products_task/products_task/build/app/outputs/apk/debugapp-armeabi-v7a-debug.apk
+          group: Beta Testers
+          file: build/app/outputs/apk/debug/app-armeabi-v7a-debug.apk
           notifyTesters: true
           debug: false
 # push to master, main, develop
