--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,7 +88,7 @@ jobs:
       - name: upload artefact to App Center
         uses: wzieba/AppCenter-Github-Action@v1
         with:
-          appName: products_apk
+          appName: ahmed.mohamed-5d-agency.com/products_apk
           token: ${{secrets.APP_CENTER_TOKEN}}
           group: Beta Testers
           file: build/app/outputs/apk/debug/app-armeabi-v7a-debug.apk
